Bug 1244006 - Use const instead of MOZ_CONSTEXPR to avoid startup crash; r=dbaron

PGO builds on Visual Studio 2015 Update 1 did not take kindly to
MOZ_CONSTEXPR in this file, causing a startup crash (for reasons
I can't explain). Switching to literal "const" makes the crash
go away.

MozReview-Commit-ID: K1A43NIa6lG